# tfi-lang

./: Cargo.toml  README.md  grammar.pest  main.tfi  output.js
docs/: README.md
docs/ast/: README.md
docs/compiler/: README.md
docs/generator/: README.md
docs/grammar/: README.md
docs/lexer/: README.md
docs/parser/: README.md
docs/validator/: README.md
memory-bank/: activeContext.md  progress.md  projectbrief.md
src/: ast.rs  compiler.rs  generator.rs  lexer.rs  lib.rs  main.rs  parser.rs  validator.rs
tests/: integration_tests.rs
